# llamacpp4dart

./: .gitignore  .gitmodules  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/llamacpp4dart/: LlamaCppDartPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/llamacpp4dart_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: llamacpp4dart.podspec
ios/Classes/: llamacpp4dart.c
lib/bind/: llama_binding.dart
lib/src/: llama.dart
linux/: CMakeLists.txt
macos/: llamacpp4dart.podspec
src/: CMakeLists.txt
windows/: CMakeLists.txt
